# cpp20-testing

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt  test1.cpp
